<resources>
    <string name="app_name">AndroidLabs</string>

    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\'m a button</string>

    <string name="login_message">login</string>
    <string name="password_message">password</string>

    <string name="radioButton_message">RadioButton</string>
    <string name="checkBox_message">CheckBox</string>
    <string name="switch_message">What does this do?</string>
    <string name="imageBox_message">ImageBox</string>

    <string name="DefaultEmail"></string>

    <string name="response_message">Here is my response</string>

    <string name="dialog_message">Please Choose Your Answer </string>
    <string name="dialog_title">AndroidLab3 </string>
    <string name="ok"> ok</string>
    <string name="cancel">cancel </string>

    <string name="switch_On">Switch is On</string>
    <string name="switch_Off">Switch is Off</string>

    <string name="StartchatButtonText">Start Chat </string>

    <string name="send_message">Send</string>

    <string name="current_temp">Current Temp</string>
    <string name="min_temp">Min Temp</string>
    <string name="max_temp">Max Temp</string>
    <string name="weather_forecast">Weather Forecast</string>

    <string name="Message_content">Message are here</string>

    <string name="Message_ID">ID=</string>
    <string name="Delete_Message">DELETE THIS MESSAGE</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_test_toolbar">TestToolbar</string>

    <string name="test_toolbar">Test Toolbar</string>


    <string name="action_settings"> action_settings</string>

    <string name="notification"> This is a notification for the toolbar</string>

    <string name="dialogTitle"> Do you want to go back?</string>
    <string name="customDialogTitle"> This is a custom dialog</string>

    <string name="customLayout">New Message</string>




</resources>
